--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Proyecto TU.PELI - Diseño de Interfaces</name>
 	<description>Proyecto Maven para Diseño de interfaces</description>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<javafx.version>17.0.1</javafx.version>
+		<javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
+	</properties>
+
 	<dependencies>
 		<!-- SQLite Driver -->
 		<dependency>
@@ -25,6 +32,17 @@
 			<artifactId>activation</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<!--JavaFX-->
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-fxml</artifactId>
+			<version>22-ea+16</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<version>21.0.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -42,6 +60,14 @@
 				<version>3.8.1</version>
 				<configuration>
 					<release>17</release>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-maven-plugin</artifactId>
+				<version>0.0.8</version>
+				<configuration>
+					<mainClass>HelloFX</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
