--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
             <artifactId>javafx-web</artifactId>
             <version>21.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>21.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
